[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["anemoneruri <example@example.com>"]
[tool.poetry.dependencies]
requires-python = ">=3.11"
dependencies = [
    "discord-py",
    "feedparser>=6.0.12",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
